--- a/.ebextensions/https-lb-terminate.config
+++ b/.ebextensions/https-lb-terminate.config
@@ -1,5 +1,6 @@
 option_settings:
   aws:elb:listener:443:
+    SSLCertificateId: arn:aws:acm:us-east-1:549206858059:certificate/d2e0b4ae-76e6-439b-b052-dbb225b9c009
     ListenerProtocol: HTTPS
     InstancePort: 443
     InstanceProtocol: HTTPS
