--- a/.ebextensions/nginx.config
+++ b/.ebextensions/nginx.config
@@ -1,48 +1,16 @@
 files:
-  "/etc/nginx/nginx.conf":
+  "/tmp/nginx.conf":
     content: |
-      # Elastic Beanstalk Nginx Configuration File
-      user  nginx;
-      worker_processes  auto;
-
-
-  error_log  /var/log/nginx/error.log;
-
-  pid        /var/run/nginx.pid;
-
-  events {
-      worker_connections  1024;
-  }
-
-  http {
-
-      # Custom config
-      # HTTP 4xx ignored.
-      map $status $loggable {
-        ~^[4]  0;
-        default 1;
-      }
-
-      # Custom config
-      # HTTP 4xx ignored.
+      # Custom config to ignore 4xx in the health file only
       map $status $modstatus {
         ~^[4]  200;
         default $status;
       }
 
-      include       /etc/nginx/mime.types;
-      default_type  application/octet-stream;
-
-      access_log    /var/log/nginx/access.log;
-
-      log_format  healthd '$msec"$uri"$modstatus"$request_time"$upstream_response_time"$http_x_forwarded_for';
-
-      include       /etc/nginx/conf.d/*.conf;
-      include       /etc/nginx/sites-enabled/*;
-  }
-
-
-
 container_commands:
-  restart-nginx:
-    command: "service nginx restart"
+  modify_nginx_1:
+    command: "cp /tmp/nginx.conf /etc/nginx/conf.d/custom_status.conf"
+  modify_nginx_2:
+    command: sudo sed -r -i 's@\$status@$modstatus@' /opt/elasticbeanstalk/support/conf/webapp_healthd.conf
+  modify_nginx_3:
+    command: sudo /etc/init.d/nginx restart
