--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,7 @@
 node_modules/*
+results/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
