--- a/.ebextensions/https.config
+++ b/.ebextensions/https.config
@@ -52,4 +52,4 @@ container_commands:
   removeconfig:
     command: "rm -f /etc/nginx/conf.d/00_elastic_beanstalk_proxy.conf"
   reloadnginx:
-    command: "service nginx reload"
+    command: "/etc/init.d/nginx reload"
