--- a/.ebextensions/https.config
+++ b/.ebextensions/https.config
@@ -48,8 +48,16 @@ files:
            gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
         }
 
+   /opt/elasticbeanstalk/hooks/configdeploy/post/99_kill_default_nginx.sh:
+     owner: root
+     group: root
+     mode: "000755"
+     content: |
+       #!/bin/bash -xe
+       rm -f /etc/nginx/conf.d/00_elastic_beanstalk_proxy.conf
+       service nginx stop 
+       service nginx start
+ 
 container_commands:
   removeconfig:
-    command: "rm -f /etc/nginx/conf.d/00_elastic_beanstalk_proxy.conf"
-  reloadnginx:
-    command: "/etc/init.d/nginx reload"
+command: "rm -f /tmp/deployment/config/#etc#nginx#conf.d#00_elastic_beanstalk_proxy.conf /etc/nginx/conf.d/00_elastic_beanstalk_proxy.conf"
