--- a/.ebextensions/https.config
+++ b/.ebextensions/https.config
@@ -49,7 +49,9 @@ files:
         }
 
 container_commands:
-  01_removeconfig:
+  01_remove_tmp:
+    command: "sudo rm -f /tmp/deployment/config/#etc#nginx#conf.d#00_elastic_beanstalk_proxy.conf"
+  02_removeconfig:
     command: "sudo rm -f /etc/nginx/conf.d/00_elastic_beanstalk_proxy.conf"
   02_reload_nginx:
-    command: "sudo service nginx reload"
+    command: "sudo /etc/init.d/nginx restart"
