--- a/.ebextensions/https.config
+++ b/.ebextensions/https.config
@@ -11,7 +11,7 @@ files:
 
         server {
             listen 8080;
-            server_name    unichatlive.com;
+            server_name  wesblake.myinstance.com;
 
             if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})T(\d{2})") {
                 set $year $1;
