--- a/.ebextensions/https.config
+++ b/.ebextensions/https.config
@@ -53,5 +53,5 @@ container_commands:
     command: "sudo rm -f /tmp/deployment/config/#etc#nginx#conf.d#00_elastic_beanstalk_proxy.conf"
   02_removeconfig:
     command: "sudo rm -f /etc/nginx/conf.d/00_elastic_beanstalk_proxy.conf"
-  02_reload_nginx:
-    command: "sudo /etc/init.d/nginx restart"
+  03_reload_nginx:
+    command: "sudo service nginx reload"
