--- a/.ebextensions/https.config
+++ b/.ebextensions/https.config
@@ -1,57 +1,79 @@
-files:
-   /etc/nginx/conf.d/proxy.conf:
-     owner: root
-     group: root
-     mode: "000644"
-     content: |       
-        upstream nodejs {
-            server 127.0.0.1:8081;
-            keepalive 256;
-        }
-
-        server {
-            listen 8080;
-            server_name  apex.stratotechnology.com;
-
-            if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})T(\d{2})") {
-                set $year $1;
-                set $month $2;
-                set $day $3;
-                set $hour $4;
+    files:
+       /etc/nginx/conf.d/proxy.conf:
+         owner: root
+         group: root
+         mode: "000644"
+         content: |
+            upstream nodejs {
+                server 127.0.0.1:8081;
+                keepalive 256;
             }
-            access_log /var/log/nginx/healthd/application.log.$year-$month-$day-$hour healthd;
-            access_log  /var/log/nginx/access.log  main;
-
-
-            location / {
-                      set $redirect 0;
-                      if ($http_x_forwarded_proto != "https") {
-                        set $redirect 1;
-                      }
-                      if ($http_user_agent ~* "ELB-HealthChecker") {
-                        set $redirect 0;
-                      }
-                      if ($redirect = 1) {
-                        return 301 https://$server_name$request_uri;
-                      }
-
-                proxy_pass  http://nodejs;
-                proxy_set_header   Connection "";
-                proxy_http_version 1.1;
-                proxy_set_header        Host            $host;
-                proxy_set_header        X-Real-IP       $remote_addr;
-                proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
-
-           gzip on;
-           gzip_comp_level 4;
-           gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
-        }
-
-container_commands:
-  01_remove_tmp:
-    command: "sudo rm -f /tmp/deployment/config/#etc#nginx#conf.d#00_elastic_beanstalk_proxy.conf"
-  02_removeconfig:
-    command: "sudo rm -f /etc/nginx/conf.d/00_elastic_beanstalk_proxy.conf"
-  03_reload_nginx:
-    command: "sudo service nginx reload"
+     
+            server {
+                listen 8080;
+                server_name    apex.stratotechnology.com.com;
+     
+                if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})T(\d{2})") {
+                    set $year $1;
+                    set $month $2;
+                    set $day $3;
+                    set $hour $4;
+                }
+                access_log /var/log/nginx/healthd/application.log.$year-$month-$day-$hour healthd;
+                access_log  /var/log/nginx/access.log  main;
+     
+     
+                location / {
+                          set $redirect 0;
+                          if ($http_x_forwarded_proto != "https") {
+                            set $redirect 1;
+                          }
+                          if ($http_user_agent ~* "ELB-HealthChecker") {
+                            set $redirect 0;
+                          }
+                          if ($redirect = 1) {
+                            return 301 https://$server_name$request_uri;
+                          }
+     
+                          proxy_pass  http://nodejs;
+                          proxy_set_header   Connection "";
+                          proxy_http_version 1.1;
+                          proxy_set_header        Host            $host;
+                          proxy_set_header        X-Real-IP       $remote_addr;
+                          proxy_set_header        X-Forwarded-For $proxy_add_x_forwarded_for;
+                  }
+     
+               gzip on;
+               gzip_comp_level 4;
+               gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+            }
+     
+            server {
+                listen 8080;
+                server_name www2.stratotechnology.com.com;
+     
+                if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})T(\d{2})") {
+                    set $year $1;
+                    set $month $2;
+                    set $day $3;
+                    set $hour $4;
+                }
+                access_log /var/log/nginx/healthd/application.log.$year-$month-$day-$hour healthd;
+                access_log  /var/log/nginx/access.log  main;
+     
+                location / {
+                    return 301 https://apex.stratotechnology.com$request_uri;
+                }
+     
+                gzip on;
+                gzip_comp_level 4;
+                gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
+            }
+     
+    container_commands:
+      01_remove_tmp:
+        command: "sudo rm -f /tmp/deployment/config/#etc#nginx#conf.d#00_elastic_beanstalk_proxy.conf"
+      02_removeconfig:
+        command: "sudo rm -f /etc/nginx/conf.d/00_elastic_beanstalk_proxy.conf"
+      03_reload_nginx:
+        command: "sudo service nginx reload"
