--- a/.ebextensions/https.config
+++ b/.ebextensions/https.config
@@ -50,7 +50,7 @@
      
             server {
                 listen 8080;
-                server_name www2.stratotechnology.com.com;
+                server_name www2.stratotechnology.com;
      
                 if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})T(\d{2})") {
                     set $year $1;
