--- a/.ebextensions/https.config
+++ b/.ebextensions/https.config
@@ -48,6 +48,23 @@ files:
            gzip_types text/plain text/css application/json application/javascript application/x-javascript text/xml application/xml application/xml+rss text/javascript;
         }
 
+        server {
+                listen 8080;
+                server_name www2.stratotechnology.com;
+     
+                if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})T(\d{2})") {
+                    set $year $1;
+                    set $month $2;
+                    set $day $3;
+                    set $hour $4;
+                }
+                access_log /var/log/nginx/healthd/application.log.$year-$month-$day-$hour healthd;
+                access_log  /var/log/nginx/access.log  main;
+     
+                location / {
+                    return 301 https://apex.stratotechnology.com$request_uri;
+                }
+
 container_commands:
   01_remove_tmp:
     command: "sudo rm -f /tmp/deployment/config/#etc#nginx#conf.d#00_elastic_beanstalk_proxy.conf"
