--- a/.ebextensions/https.config
+++ b/.ebextensions/https.config
@@ -11,7 +11,7 @@ files:
 
         server {
             listen 8080;
-            server_name    apex.stratotechnology.com;
+            server_name    yourdomain.com;
 
             if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})T(\d{2})") {
                 set $year $1;
@@ -50,7 +50,7 @@ files:
 
         server {
                 listen 8080;
-                server_name www2.stratotechnology.com;
+                server_name www.yourdomain.com;
      
                 if ($time_iso8601 ~ "^(\d{4})-(\d{2})-(\d{2})T(\d{2})") {
                     set $year $1;
@@ -62,7 +62,7 @@ files:
                 access_log  /var/log/nginx/access.log  main;
      
                 location / {
-                    return 301 https://apex.stratotechnology.com$request_uri;
+                    return 301 https://yourdomain.com$request_uri;
                 }
         }
 
